# Dinamica

./: AUTHORS  ChangeLog  ChangeLog2009  ChangeLog2010  ChangeLog2011  ChangeLog2012  ChangeLog2013  Makefile.am  Makefile.in  Makefile.orig  NEWS  README  README.md  TODO  configure  configure.ac
doc/: Makefile.am  Makefile.in  br2_hos.eps  br2_hss.eps  br2_ihos.eps  br2_op.eps  br2_rnd.eps  br2_rnd_op.eps  br3_os3.eps  br3_wave.eps  dinamica.bib  dinamica.tex  nd_lag0.eps  nd_lag0_shifted.eps  nd_lag2.eps  period-n.eps  rB2_chaos.eps  rB2_ihlc.eps  rB2_op.eps  rep_os.eps  rep_samp.eps  rep_ss.eps  sa_ex_bruss_os.eps  sa_ex_bruss_os_samp.eps  sa_ex_bruss_ss.eps  sa_ex_bruss_ss_sl_ampl.eps  single.eps  single_samp.eps  slope.eps  working_scheme.eps
ode/: bruss.ode  bruss2.ode  bruss3.ode  lorenz.ode  rep.ode  repB2.ode  repGilODE.ode  single.ode  single2.ode  ts.ode
src/: Makefile.am  Makefile.in  config.h.in  continue.c  continue.h  cross.c  din.h  din_main.c  errors.h  file.c  gnuplot_i.c  gnuplot_i.h  graph.c  graph.h  init.c  init.h  input_interpreter.c  integrator.c  lyapunov.c  lyapunov.h  main.c  ode.c  random.c  random.h  read_config.c  read_ode.c  singularity.c  singularity.h  solver.c  submenu.c  thistogram.h  trajectory.c  trajectory.h
